# cubes

./: CMakeLists.txt  README.md  camera.hxx  environment.cxx  environment.hxx  main.cxx  shaderprog.cxx  shaderprog.hxx  texture.cxx  texture.hxx
glad/include/glad/: glad.h
glad/src/: glad.c
scenegraph/: mesh.cxx  mesh.hxx  model.cxx  model.hxx  node.cxx  node.hxx
shaders/: shader_frag.glsl  shader_vert.glsl
